--- a/Kaggle_Challenge.ipynb
+++ b/Kaggle_Challenge.ipynb
@@ -985,7 +985,8 @@
    "outputs": [],
    "source": [
     "features = np.shape(data)[1]\n",
-    "#Matriz de covarianza\n",
+    "#Matriz de covarianza (esta sección se inspiró mucho de la solución del ejercicio 24 de Nathalia Cardona\n",
+    "#https://github.com/ComputoCienciasUniandes/MetodosComputacionalesAvanzados/blob/master/soluciones/NathaliaCardona_ejercicio24.ipynb)\n",
     "cov_matrix = np.array(data.cov())\n",
     "#Autovalores y autovectores\n",
     "val, vec = np.linalg.eig(cov_matrix)"
@@ -1469,21 +1470,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
